--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,6 +11,7 @@
     
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
  	<uses-feature android:name="android.hardware.camera" android:required="true"/>
+ 	<uses-feature android:name="android.hardware.camera.autofocus" />
  
     <application
         android:hardwareAccelerated="true"
