--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,10 +7,11 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
     <uses-permission android:name="android.permission.CAMERA"/>
-     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+      <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     
     <uses-feature android:glEsVersion="0x00020000" android:required="true" />
- 	<uses-feature android:name="android.hardware.camera" android:required="true"/>
+ 	<uses-feature android:name="android.hardware.camera"/>
  	<uses-feature android:name="android.hardware.camera.autofocus" />
  
     <application
@@ -18,7 +19,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:name="com.gnachury.GlobalApplication">
         
         <activity android:name="com.gnachury.MainActivity" android:screenOrientation="landscape">
             <intent-filter >
@@ -26,6 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
             
+        </activity>
+        <activity android:name="com.gnachury.NotificationReceiverActivity" android:parentActivityName="com.gnachury.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.gnachury.MainActivity"/>
         </activity>
     </application>
 
